fix(columns): Fix double scroll bar by only showing active scroll bars

--- a/app/javascript/styles/components.scss
+++ b/app/javascript/styles/components.scss
@@ -1432,7 +1432,7 @@ a.status__content__spoiler-link {
 }
 
 .scrollable {
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
   flex: 1 1 auto;
   backface-visibility: hidden;
